# cuPythia

./: .gitignore  .zenodo.json  ARCHITECTURE.md  AUDIT.md  BUILD_WINDOWS.md  CITATION.cff  CLUSTER.md  HEP_FEATURES.md  INSTALL.md  NOTICE  PORTABILITY.md  README.md  RESEARCH_DIRECTIONS.md  cluster.sh  hosts.example.txt  run.sh
cuPythia/: CMakeLists.txt  Makefile  README.md  build.ps1
cuPythia/00_toolchain_check/: README.md  mc_pi.cu
cuPythia/01_xsec_ee_mumu/: README.md  xsec_ee_mumu.cu
cuPythia/02_qcd_2to2_me/: README.md  qcd_2to2.cu
cuPythia/03_fused_resident_me/: fused_gg2gg.cu
cuPythia/04_multi_gpu/: README.md  multi_gpu_gg2gg.cu
cuPythia/05_reproducible_events/: repro_events.cu
cuPythia/06_fp32_mixed/: README.md  fp32_gg2gg.cu
cuPythia/07_unweighting_lhe/: README.md  unweight_lhe.cu
cuPythia/08_qcd_process_library/: README.md  qcd_library.cu
cuPythia/09_neutrino_dis/: README.md  nu_dis.cu
cuPythia/10_cub_compaction/: README.md  cub_compaction.cu
cuPythia/11_vegas_importance/: README.md  vegas.cu
cuPythia/12_phase_space/: README.md  phase_space.cu
cuPythia/13_rescattering/: README.md  rescatter.cu
cuPythia/14_parton_shower/: README.md  shower.cu
cuPythia/common/: rng.cuh
cuPythia/pipeline/: Makefile  PRECISION.md  README.md  RIVET.md  VALIDATION.md  as2loop_validate.cc  baryon_test.cu  bridge.cu  bridge_pythia.cc  build_events.cu  bw_inc.cuh  check_baryons.py  compare_rivet.py  compare_thrust.sh  dalitz_test.cu  decay_inc.cuh  decay_test.cu  event.cuh  generate.cu  genpdf.cc  hadronize.cu  hadronize_mr.cu  hepmc3_writer.cc  lhe_validate.cc  lhe_writer.cu  multiplicity_pythia.cc  pdf.cuh  pdf_lumi_fft.cu  pdf_xsec.cu  physics.cuh  region_inc.cuh  region_test.cu  reweight.cu  rivet_build.sh  shower_fsr.cu  shower_inc.cuh  thrust_pythia.cc  zlund_inc.cuh  zlund_test.cu
cupy/: Makefile  README.md
cupy/00_toolchain_check/: README.md  mc_pi.cu
cupy/01_xsec_ee_mumu/: xsec_ee_mumu.cu
cupy/02_qcd_2to2_me/: qcd_2to2.cu
cupy/03_fused_resident_me/: README.md  fused_gg2gg.cu
cupy/common/: rng.cuh
docs/outreach/: README.md  announcement.md  conference-abstract.md  email-pythia-mcnet.md  hsf-generators-wg.md
packaging/: Containerfile  cupythia.def
packaging/spack/: repo.yaml
pythia8317/examples/: Makefile.inc
pythia8317/include/Pythia8/: SigmaProcess.h
pythia8317/src/: Basics.cc  SigmaProcess.cc
upstream/: OPT1-sigmaPDF-slot-lookup.patch  README.md
